Fix bug in the realm variable

--- a/cocowow/zarf-config.yaml
+++ b/cocowow/zarf-config.yaml
@@ -5,7 +5,9 @@ package:
       # renovate: datasource=gitlab-tags depName=big-bang/bigbang versioning=semver registryUrl=https://repo1.dso.mil
       bigbang_version: "2.1.0"
       domain: bigbang.dev
+      realm: cocowow
   deploy:
     set:
       keycloak_key_file: bigbang.dev.key
       keycloak_cert_file: bigbang.dev.cert 
+      realm: cocowow
