--- a/.github/workflows/pipeline.dubbd.yaml
+++ b/.github/workflows/pipeline.dubbd.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Create EKS cluster
         run: |
           echo ${{ steps.get_cluster_name.outputs.short_sha }}
-          zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=${{ steps.get_cluster_name.outputs.short_sha }}
+          zarf package deploy zarf-package-distro-eks-multi.tar.zst --set cluster_name=${{ steps.get_cluster_name.outputs.short_sha }} --confirm 
         working-directory: .github/workflows/eks
         # eventually have zarf deploy   \
       - name: Show Cluster
@@ -65,7 +65,7 @@ jobs:
         timeout-minutes: 60
       
       - name: Deploy DUBBD
-        run: zarf package deploy zarf-package-*.tar.zst --confirm -l debug
+        run: zarf package deploy zarf-package-*.tar.zst --confirm
         working-directory: defense-unicorns-distro
         timeout-minutes: 60
 
