--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -84,6 +84,9 @@ components:
         - cmd: "./zarf tools kubectl version --short || true"
           setVariables:
             - name: OUTPUT
+        - cmd: "./zarf tools kubectl get hr bigbang -n bigbang &>/dev/null && echo true || echo false"
+          setVariables:
+            - name: IS_UPGRADE
         after:
         - cmd: "./preflight.sh"
     files:
