--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -76,6 +76,10 @@ components:
       target: run/loki/.terraform
     - source: loki/main.tf
       target: run/loki/main.tf
+    - source: loki/variables.tf
+      target: run/loki/variables.tf
+    - source: loki/output.tf
+      target: run/loki/output.tf
     - source: loki/terraform.tfvars
       target: run/loki/terraform.tfvars
     - source: loki/.terraform.lock.hcl
