delete by label

--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -105,7 +105,7 @@ components:
           - cmd: |
               export PATH=$(dirname ./zarf):$PATH
               ./teardown.sh
-            description: "tearing down Big Bang"
+            description: "Tear down Big Bang"
     files:
       - source: scripts/teardown.sh
         target: teardown.sh
