--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -91,6 +91,7 @@ jobs:
         timeout-minutes: 60
 
       - name: Remove DUBBD-AWS
+        if: always()
         run: zarf package remove zarf-package-*.tar.zst --confirm
         working-directory: aws
         timeout-minutes: 60
@@ -209,7 +210,13 @@ jobs:
         timeout-minutes: 60
 
       - name: Remove DUBBD-AWS
-        run: zarf package remove zarf-package-*.tar.zst --confirm
+        if: always()
+        run: |
+          zarf package remove \
+            oci://ghcr.io/defenseunicorns/packages/big-bang-distro-aws:${{ steps.latest-package-version.outputs.latest-package-version }} \
+            --confirm
+
+          zarf package remove zarf-package-*.tar.zst --confirm
         working-directory: aws
         timeout-minutes: 60
 
