--- a/aws/zarf-config.yaml
+++ b/aws/zarf-config.yaml
@@ -1,5 +1,5 @@
 package:
-  create: 
+  create:
     max_package_size: "1000000000"
     set:
       # renovate: datasource=gitlab-tags depName=big-bang/bigbang versioning=semver registryUrl=https://repo1.dso.mil
@@ -12,8 +12,7 @@ package:
       public_key_file: bigbang.dev.key
       public_cert_file: bigbang.dev.cert
       name: "big-bang-aws" # maybe inject something here for the GH PR?
-      #eks_oidc_provider_arn: "arn:aws:iam::111111111111:oidc-provider/oidc.eks.us-west-2.amazonaws.com/id/1A1A1A1A1A1A1A1A1A1A1A1A1A1A1A1A"
+      #Bring your own kms key, if omitted a key will be created with an alias prefix of "<cluster name>-loki-"
       #loki_kms_key_arn: "arn:aws:kms:us-west-2:000000000000:key/mrk-0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
-      #loki_kms_key_alias: "big-bang-loki"
       #loki_force_destroy: "true"
 
