--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -102,42 +102,14 @@ components:
             description: "Patch BigBang to force an update on updates"
       onRemove:
         before:
-          - cmd: ./zarf tools kubectl patch helmrelease -n bigbang bigbang --type=merge -p '{"spec":{"suspend":true}}'
-            description: Suspend the BigBang Helm Release so we don't have a reconcile while cleaning up
-          - cmd: ./zarf tools kubectl delete helmrelease -n bigbang istio --ignore-not-found
-            description: Delete istio to prevent ingress into cluster while cleanup is occuring
-          - cmd: ./zarf tools kubectl delete helmrelease -n bigbang istio-operator --ignore-not-found
-            description: Delete istio-operator once istio is cleaned up
-          - cmd: ./zarf tools kubectl delete helmrelease -n bigbang monitoring --ignore-not-found
-            description: Delete Monitoring
-          - cmd: ./zarf tools kubectl delete providers grafana -n monitoring --ignore-not-found
-          - cmd: ./zarf tools kubectl delete alerts grafana -n monitoring --ignore-not-found
-          - cmd: ./zarf tools kubectl delete helmrelease -n bigbang promtail --ignore-not-found
-            description: Delete promtail
-          - cmd: ./zarf tools kubectl delete helmrelease -n bigbang loki --ignore-not-found
-            description: Delete loki
-          - cmd: ./zarf tools kubectl delete kiali -n kiali kiali --ignore-not-found
-            description: Delete Kiali
-          - cmd: ./zarf tools kubectl delete helmrelease -n bigbang tempo --ignore-not-found
-            description: Delete Tempo
-          - cmd: ./zarf tools kubectl delete helmrelease -n bigbang neuvector  --ignore-not-found
-            description: Delete neuvector
-          - cmd: ./zarf tools kubectl delete validatingwebhookconfigurations.admissionregistration.k8s.io neuvector-validating-crd-webhook  --ignore-not-found
-            description: cleanup neuvector validatingwebhooks
-          - cmd: ./zarf tools kubectl delete helmrelease -n bigbang kyverno-reporter --ignore-not-found
-            description: Delete kyverno-reporter
-          - cmd: ./zarf tools kubectl delete helmrelease -n bigbang kyverno-policies --ignore-not-found
-            description: Delete kyverno-policies
-          - cmd: ./zarf tools kubectl delete helmrelease -n bigbang kyverno --ignore-not-found
-            description: Delete kyverno
-          - cmd: ./zarf tools kubectl delete validatingwebhookconfigurations.admissionregistration.k8s.io neuvector-validating-crd-webhook  --ignore-not-found
-            description: cleanup neuvector validatingwebhooks
-          - cmd: ./zarf tools kubectl delete validatingwebhookconfigurations.admissionregistration.k8s.io kyverno-policy-validating-webhook-cfg kyverno-resource-validating-webhook-cfg  --ignore-not-found
-            description: Cleanup validating webhoooks from kyverno
-          - cmd: ./zarf tools kubectl delete helmrelease -n bigbang kiali --ignore-not-found
-          - cmd: ./zarf tools kubectl delete helmrelease -n bigbang metrics-server --ignore-not-found
-          - cmd: ./zarf tools kubectl delete gitrepositories -n bigbang -l app.kubernetes.io/part-of=bigbang
-          - cmd: ./zarf tools kubectl delete apiservices.apiregistration.k8s.io v1beta1.metrics.k8s.io --ignore-not-found
+          - cmd: |
+              export PATH=$(dirname ./zarf):$PATH
+              ./teardown.sh
+            description: "Tear down Big Bang"
+    files:
+      - source: scripts/teardown.sh
+        target: teardown.sh
+        executable: true
     manifests:
       - name: slack-alerts
         files:
