--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -1,4 +1,3 @@
-
 name: DUBBD AWS
 
 on:
@@ -13,7 +12,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -48,10 +46,13 @@ jobs:
         run: zarf package create --confirm
         working-directory: .github/workflows/eks
 
-      - name: Create EKS cluster and Zarf Init
+      - name: Create EKS cluster
         run: |
           echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
-          zarf package deploy zarf-package-distro-eks-multi.tar.zst --set cluster_name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} --confirm 
+
+          zarf package deploy zarf-package-distro-eks-multi.tar.zst \
+            --set cluster_name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
+            --confirm 
         working-directory: .github/workflows/eks #just holds the zarf-config
         id: create-cluster
 
@@ -74,11 +75,11 @@ jobs:
       - name: Deploy DUBBD-AWS
         run: |
           echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
-          # Pass in KMS Version
-          #zarf package deploy zarf-package-*.tar.zst --set loki_force_destroy=true --set loki_kms_key_arn=${{ steps.get.outputs.kms_key_arn }} --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} --confirm 
-          # Create KMS Version
-          zarf package deploy zarf-package-*.tar.zst --confirm --set loki_force_destroy=true --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }}
 
+          zarf package deploy zarf-package-*.tar.zst \
+            --set loki_force_destroy=true \
+            --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
+            --confirm
         working-directory: aws
         timeout-minutes: 60
 
@@ -94,14 +95,6 @@ jobs:
         run: |
           ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
         working-directory: .github/workflows/eks
-
-
-      - name: Remove KMS Key to be replaced by UDS IaC module later
-        if: always()
-        working-directory: .github/workflows/kms
-        run: 
-        # eventually have zarf deploy   \
-          terraform destroy -auto-approve
 
   upgrade:
     runs-on: ubuntu-latest
@@ -151,23 +144,15 @@ jobs:
         run: zarf package create --confirm
         working-directory: .github/workflows/eks
 
-      - name: Create EKS cluster and Zarf Init
+      - name: Create EKS cluster
         run: |
           echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
-          zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=${{ steps.get_cluster_name.outputs.eks_cluster_name }}
+
+          zarf package deploy zarf-package-distro-eks-multi.tar.zst \
+            --set cluster_name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
+            --confirm
         working-directory: .github/workflows/eks #just holds the zarf-config
         id: create-cluster
-      - name: Create KMS Key to be replaced by UDS IaC module later
-        working-directory: .github/workflows/kms
-        id: create-kms
-        run: |
-          terraform init
-          terraform apply -auto-approve --var kms_key_alias=${{ steps.get_cluster_name.outputs.short_sha }}
-
-      - name: get KMS key
-        working-directory: .github/workflows/kms
-        id: get
-        run: echo "kms_key_arn=$(terraform output -raw kms_key_arn)" >> $GITHUB_OUTPUT
 
       - name: Show Cluster
         run: |
@@ -188,16 +173,17 @@ jobs:
         run: |
           zarf package deploy \
             oci://ghcr.io/defenseunicorns/packages/big-bang-distro-aws:${{ steps.latest-package-version.outputs.latest-package-version }} \
-            --confirm \
             --set loki_force_destroy=true \
-            --set loki_kms_key_arn=${{ steps.get.outputs.kms_key_arn }} \
-            --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }}
+            --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
+            --confirm
 
       - name: Deploy DUBBD-AWS
         run: |
           echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
-          zarf package deploy zarf-package-*.tar.zst --confirm --set loki_force_destroy=true --set loki_kms_key_arn=${{ steps.get.outputs.kms_key_arn }} --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }}
-
+          zarf package deploy zarf-package-*.tar.zst \
+            --set loki_force_destroy=true \
+            --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
+            --confirm
         working-directory: aws
         timeout-minutes: 60
 
@@ -213,4 +199,3 @@ jobs:
         run: |
           ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
         working-directory: .github/workflows/eks
-
