--- a/dco/zarf.yaml
+++ b/dco/zarf.yaml
@@ -56,4 +56,5 @@ components:
       bigbang:
         version: "###ZARF_PKG_TMPL_BIGBANG_VERSION###"
         valuesFiles:
+          - ../values/keycloak.yaml
           - ./dco-values.yaml
