Add onFailure script

--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -111,6 +111,10 @@ components:
     required: true
     import:
       path: ../defense-unicorns-distro
+  - name: preflight
+    required: true
+    import:
+      path: ../defense-unicorns-distro
   - name: bigbang
     required: true
     import:
