--- a/values/keycloak.yaml
+++ b/values/keycloak.yaml
@@ -49,6 +49,8 @@ addons:
           value: ispn
         - name: KC_CACHE_STACK
           value: kubernetes
+        - name: CUSTOM_REGISTRATION_CONFIG
+          value: /opt/keycloak/conf/custom-regitration-config.yaml
       extraVolumes: |-
         - name: certauthority
           secret:
@@ -59,6 +61,10 @@ addons:
         - name: quarkusproperties
           secret:
             secretName: {{ include "keycloak.fullname" . }}-quarkusproperties
+            defaultMode: 0777
+        - name: customreg
+          secret:
+            secretName: {{ include "keycloak.fullname" . }}-customreg
             defaultMode: 0777
         - name: plugin
           emptyDir: {}
@@ -76,6 +82,9 @@ addons:
         - name: quarkusproperties
           mountPath: /opt/keycloak/conf/quarkus.properties
           subPath: quarkus.properties
+        - name: customreg
+          mountPath: /opt/keycloak/conf/custom-regitration-config.yaml
+          subPath: custom-regitration-config.yaml
       secrets:
         env:
           stringData:
@@ -83,6 +92,87 @@ addons:
         certauthority:
           stringData:
             cas.pem: '{{ .Files.Get "resources/dev/dod_cas.pem" }}'
+        customreg:
+          stringData:
+            custom-regitration-config.yaml: |-
+              x509:
+                # User attribute to bind to when associating PKI with a user account
+                userIdentityAttribute: "usercertificate"
+                # Reset on every login to "", tracks if the current login session is using PKI at all, even if not bound to the user
+                userActive509Attribute: "activecac"
+                # When a user with valid PKI registers, join to the listed groups
+                autoJoinGroup:
+                  - "/Impact Level 2 Authorized"
+                  - "/Impact Level 4 Authorized"
+                  - "/Impact Level 5 Authorized"
+                # Policies that must match to consider the cert valid
+                requiredCertificatePolicies:
+                  - "2.16.840.1.101.2.1.11.5"    #id-US-dod-medium
+                  - "2.16.840.1.101.2.1.11.9"    #id-US-dod-mediumhardware
+                  - "2.16.840.1.101.2.1.11.10"   #id-US-dod-PIV-Auth
+                  - "2.16.840.1.101.2.1.11.17"    #id-US-dod-mediumNPE
+                  - "2.16.840.1.101.2.1.11.18"    #id-US-dod-medium-2048
+                  - "2.16.840.1.101.2.1.11.19"    #id-US-dod-mediumHardware-2048
+                  - "2.16.840.1.101.2.1.11.20"    #id-US-dod-PIV-Auth-2048
+                  - "2.16.840.1.101.2.1.11.31"   #id-US-dod-peerInterop
+                  - "2.16.840.1.101.2.1.11.36"   #id-US-dod-mediumNPE-112
+                  - "2.16.840.1.101.2.1.11.37"   #id-US-dod-mediumNPE-128
+                  - "2.16.840.1.101.2.1.11.38"   #id-US-dod-mediumNPE-192
+                  - "2.16.840.1.101.2.1.11.39"   #id-US-dod-medium-112
+                  - "2.16.840.1.101.2.1.11.40"   #id-US-dod-medium-128
+                  - "2.16.840.1.101.2.1.11.41"   #id-US-dod-medium-192
+                  - "2.16.840.1.101.2.1.11.42"   #id-US-dod-mediumHardware-112
+                  - "2.16.840.1.101.2.1.11.43"   #id-US-dod-mediumHardware-128
+                  - "2.16.840.1.101.2.1.11.44"   #id-US-dod-mediumHardware-192
+                  - "2.16.840.1.101.2.1.11.59"   #id-US-dod-admin
+                  - "2.16.840.1.101.2.1.11.60"   #id-US-dod-internalNPE-112
+                  - "2.16.840.1.101.2.1.11.61"   #id-US-dod-internalNPE-128
+                  - "2.16.840.1.101.2.1.11.62"   #id-US-dod-internalNPE-192
+                  - "2.16.840.1.101.3.2.1.12.1"   #id-eca-medium
+                  - "2.16.840.1.101.3.2.1.12.2"   #id-eca-medium-hardware
+                  - "2.16.840.1.101.3.2.1.12.3"   #id-eca-medium-token
+                  - "2.16.840.1.101.3.2.1.12.4"   #id-eca-medium-sha256
+                  - "2.16.840.1.101.3.2.1.12.5"   #id-eca-medium-token-sha256
+                  - "2.16.840.1.101.3.2.1.12.6"   #id-eca-medium-hardware-pivi
+                  - "2.16.840.1.101.3.2.1.12.8"   #id-eca-contentsigning-pivi
+                  - "2.16.840.1.101.3.2.1.12.9"   #id-eca-medium-device-sha256
+                  - "2.16.840.1.101.3.2.1.12.10" #id-eca-medium-hardware-sha256
+                  - "2.16.840.1.101.3.2.1.3.4"   #id-fpki-certpcy-highAssurance
+                  - "2.16.840.1.101.3.2.1.3.7"   #id-fpki-common-hardware
+                  - "2.16.840.1.101.3.2.1.3.12"   #id-fpki-certpcy-mediumHardware
+                  - "2.16.840.1.101.3.2.1.3.13"   #id-fpki-common-authentication
+                  - "2.16.840.1.101.3.2.1.3.16"   #id-fpki-common-High
+                  - "2.16.840.1.101.3.2.1.3.18"   #id-fpki-certpcy-pivi-hardware
+                  - "2.16.840.1.101.3.2.1.3.20"   #id-fpki-certpcy-pivi-contentSigning
+                  - "2.16.840.1.101.3.2.1.3.36"   #id-fpki-common-devicesHardware
+                  - "2.16.840.1.101.3.2.1.3.38"   #id-fpki-certpcy-mediumDeviceHardware
+                  - "2.16.840.1.101.3.2.1.3.39"   #id-fpki-common-piv-contentSigning
+                  - "2.16.840.1.101.3.2.1.3.24"   #id-fpki-SHA1-hardware
+              # White-list clients that do not require P1 group protection logic
+              groupProtectionIgnoreClients:
+                - "account"
+                - "account-console"
+                - "broker"
+                - "security-admin-console"
+                # Nexus hardcodes the client id so the group logic in custom plugin code must be skipped
+                - "https://nexus.bigbang.dev/service/rest/v1/security/saml/metadata"
+              # When a user registers without matching any top-level domain in emailMatchAutoJoinGroup, join to the listed groups
+              noEmailMatchAutoJoinGroup:
+                - "/Randos"
+              # When a user registers with the given top-level domain, join to the listed groups
+              emailMatchAutoJoinGroup:
+                - description: DoD IL4 Users
+                  groups:
+                    - "/Impact Level 2 Authorized"
+                    - "/Impact Level 4 Authorized"
+                  domains:
+                    - ".gov"
+                    - ".mil"
+                - description: DoD IL2 Users
+                  groups:
+                    - "/Impact Level 2 Authorized"
+                  domains:
+                    - "@test-domain.very-long-fake-tld"
         quarkusproperties:
           stringData:
             quarkus.properties: |-
