add custom registration, update certs

--- a/pepr-demo/pepr-bb-values.yaml
+++ b/pepr-demo/pepr-bb-values.yaml
@@ -15,7 +15,7 @@ addons:
   keycloak:
     enabled: true
     ingress:
-      gateway: "public"
+      gateway: "passthrough"
 
 monitoring:
   enabled: true
