--- a/values/keycloak.yaml
+++ b/values/keycloak.yaml
@@ -22,10 +22,14 @@ addons:
         - "start"
         - "--import-realm" 
       extraEnv: |-
+        - name: CUSTOM_REGISTRATION_CONFIG
+          value: /opt/jboss/keycloak/customreg.yaml
         - name: KC_HTTPS_CERTIFICATE_FILE
           value: /opt/keycloak/conf/tls.crt
         - name: KC_HTTPS_CERTIFICATE_KEY_FILE
           value: /opt/keycloak/conf/tls.key
+        - name: KC_HTTPS_TRUST_STORE_FILE
+          value: /opt/keycloak/conf/truststore.jks
         - name: KC_HTTPS_TRUST_STORE_PASSWORD
           value: password
         - name: KC_HTTPS_CLIENT_AUTH
@@ -61,10 +65,20 @@ addons:
         - name: realm
           secret:
             secretName: {{ include "keycloak.fullname" . }}-realm
+        - name: customreg
+          secret:
+            secretName: {{ include "keycloak.fullname" . }}-customreg
+        - name: truststore
+          secret:
+            secretName: {{ include "keycloak.fullname" . }}-truststore
       extraVolumeMounts: |-
         - name: certauthority
           mountPath: /etc/x509/https/cas.pem
           subPath: cas.pem
+          readOnly: true
+        - name: customreg
+          mountPath: /opt/jboss/keycloak/customreg.yaml
+          subPath: customreg.yaml
           readOnly: true
         - name: plugin
           mountPath: /opt/keycloak/providers/p1-keycloak-plugin.jar
@@ -75,10 +89,20 @@ addons:
         - name: realm
           mountPath: /opt/keycloak/data/import/realm.json
           subPath: realm.json
+        - name: truststore
+          mountPath: /opt/keycloak/conf/truststore.jks
+          subPath: truststore.jks
       secrets:
         realm:
           stringData:
             realm.json: '{{ .Files.Get "resources/dev/baby-yoda.json" }}'
+        customreg:
+          stringData:
+            customreg.yaml: '{{ .Files.Get "resources/dev/baby-yoda.yaml" }}'
+        truststore:
+          data:
+            truststore.jks: |-
+              {{ .Files.Get "resources/dev/truststore.jks" | b64enc }}
         env:
           stringData:
             X509_CA_BUNDLE: /etc/x509/https/cas.pem
@@ -90,12 +114,12 @@ addons:
             quarkus.properties: |-
               quarkus.http.non-application-root-path=/
               # custom redirects
-              quarkus.kc-routing.path-redirect./=/auth/realms/cocowow/account
-              quarkus.kc-routing.path-redirect./auth=/auth/realms/cocowow/account
-              quarkus.kc-routing.path-redirect./register=/auth/realms/cocowow/protocol/openid-connect/registrations?client_id=account&response_type=code
-              quarkus.kc-routing.path-prefix./oauth/authorize=/auth/realms/cocowow/protocol/openid-connect/auth
-              quarkus.kc-routing.path-filter./api/v4/user=/auth/realms/cocowow/protocol/openid-connect/userinfo
-              quarkus.kc-routing.path-filter./oauth/token=/auth/realms/cocowow/protocol/openid-connect/token
+              quarkus.kc-routing.path-redirect./=/auth/realms/baby-yoda/account
+              quarkus.kc-routing.path-redirect./auth=/auth/realms/baby-yoda/account
+              quarkus.kc-routing.path-redirect./register=/auth/realms/baby-yoda/protocol/openid-connect/registrations?client_id=account&response_type=code
+              quarkus.kc-routing.path-prefix./oauth/authorize=/auth/realms/baby-yoda/protocol/openid-connect/auth
+              quarkus.kc-routing.path-filter./api/v4/user=/auth/realms/baby-yoda/protocol/openid-connect/userinfo
+              quarkus.kc-routing.path-filter./oauth/token=/auth/realms/baby-yoda/protocol/openid-connect/token
               # block metrics and health enpoints from being exposed through the istio ingress
               quarkus.kc-routing.path-recursive-block./metrics=8443
               quarkus.kc-routing.path-recursive-block./health=8443
